--- a/src/components/CardBlock/CardBlock.css
+++ b/src/components/CardBlock/CardBlock.css
@@ -2,27 +2,7 @@
   
 
 }
-.embedContentHeader {
 
-  //margin:25px auto;
-  //min-width: 280px;
-  background-color:  rgba(114,171,2,0.5);
-  //display: inline-block;
-  color: #72AB02;
-  color: #eee;
-  padding:0 30px;
-  //border-radius: 5px;
-  margin:0;
-  margin-bottom:40px;
-
-
-}
-
-.embedContentHeader p {
-  font-size: 28px;
-  display:inline-block;
-  padding:8px;
-}
 
 .alink:hover {
   color:#72AB02; 
@@ -30,4 +10,21 @@
 
 .alink {
   color:#ccc; 
+}
+
+.separatorImg {
+  height:680px;
+  width:60px;
+  position: relative;
+  top:20px;
+  opacity: 0.2;
+ 
+}
+
+@media (max-width : 760px) {
+
+  .separatorImg {
+    display:none;
+
+  }
 }
