--- a/src/components/UI/NavBar/NavBar.css
+++ b/src/components/UI/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .Logo {
-  width:30px;
-  height:30px;
-  margin:auto 10px;
+  width:33px;
+  height:33px;
+  margin: 5px 10px;
 }
 .shadow {
 opacity:0.95;
@@ -10,4 +10,14 @@ opacity:0.95;
 box-shadow: 0px 15px 21px -5px rgba(0,0,0,0.75) !important;
 }
 
-  
+.hide{
+  display:none !important;
+}
+.show {
+  display:block !important;
+}
+
+.menuAnimation {
+  transition: all 0.4s ease-in;
+  overflow: hidden;
+}
