--- a/src/components/CardFactory/CardFactory.css
+++ b/src/components/CardFactory/CardFactory.css
@@ -51,17 +51,35 @@
 
   .blockingLayer {
 
-    height:220px !important;
+    height:180px !important;
     
   }
 
   .container {
     margin:40px auto !important;
-    width: 100% !important;
-    min-width:100% !important;
+    //width: 100% !important;
+    //min-width:48% !important;
     padding:0px 10px!important;
     padding-top:25px !important;
   }
+}  
+
+  @media (max-width : 400px) {
+
+    .blockingLayer {
   
+      height:180px !important;
+      
+    }
   
+    .container {
+      margin:40px auto !important;
+      width: 100% !important;
+      min-width:95% !important;
+      padding:0px 10px!important;
+      padding-top:25px !important;
+    }
+    
+
 }
+
