--- a/src/components/CardBlock/CardBlock.css
+++ b/src/components/CardBlock/CardBlock.css
@@ -14,10 +14,11 @@
 
 .separatorImg {
   height:680px;
-  width:60px;
+  width:56px;
   position: relative;
   top:20px;
   opacity: 0.2;
+  z-index: 0;
  
 }
 
