--- a/src/components/EmbedContent/EmbedContent.css
+++ b/src/components/EmbedContent/EmbedContent.css
@@ -1,7 +1,7 @@
 .container {
   margin:0px auto;
 //min-height: 100px;
-  //max-width: 1600px;
+  max-width: 1600px;
   //border-radius: 5px;
   border:0;
   align-items: center;
