--- a/src/hoc/ImageMotion/ImageMotion.css
+++ b/src/hoc/ImageMotion/ImageMotion.css
@@ -1,3 +1,18 @@
+.container {
+    
+  position: relative;
+  transition: all 0.3s ease-in;
+ 
+}
+
+.container img{
+
+  width: 100%;
+  height: 100%;
+ 
+
+}
+
 
 
 
